--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 @import url('https://fonts.cdnfonts.com/css/neutraface-text');
 @import url('https://fonts.cdnfonts.com/css/roboto-slab-2');
+@media (max-width: 767px) {
+  main {
+    margin: 0;
+    padding: 1px 5%;
+    width: 100%;
+    box-sizing: border-box;
+  }
+}
 
 
 * {
