--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -4,7 +4,7 @@
 @media (max-width: 767px) {
   main {
     margin: 0;
-    padding: 1px 0;
+    padding: 0;
     width: 100%;
     box-sizing: border-box;
     display: block;
