--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -4,16 +4,23 @@
 @media (max-width: 767px) {
   main {
     margin: 0;
-    padding: 0;
-    width: 100vw;
+    padding: 1px 0;
+    width: 100%;
     box-sizing: border-box;
     display: block;
-    clear: both;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
   }
+
   body {
-  overflow-x: hidden;
+    overflow-x: hidden;
   }
 }
+
 
 
 * {
