--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.cdnfonts.com/css/neutraface-text');
 @import url('https://fonts.cdnfonts.com/css/roboto-slab-2');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -21,8 +22,9 @@ header {
 
 main {
     background-color: white;
-    margin: 0 8%;
-    padding: 20px 10%;
+    margin: 0 5vw;
+    padding: 1px 10%;
+    display: block;
 }
 
 
