--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.cdnfonts.com/css/neutraface-text');
 @import url('https://fonts.cdnfonts.com/css/roboto-slab-2');
 
-
 * {
     margin: 0;
     padding: 0;
@@ -11,6 +10,8 @@
 body {
     background-image: linear-gradient(to bottom, black, #323330, black);
     background-repeat: no-repeat;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -24,7 +25,6 @@ main {
     background-color: white;
     margin: 0 5vw;
     padding: 1px 10%;
-    display: block;
 }
 
 
@@ -53,7 +53,7 @@ footer {
     background-color: #F0DB4F;
     padding: 2% 0;
     border-top: solid 1px black;
-    position: block;
+    display: block;
 }
 
 button {
