--- a/nbjs01/css/style.css
+++ b/nbjs01/css/style.css
@@ -23,7 +23,7 @@ header {
 
 main {
     background-color: white;
-    margin: 0 5vw;
+    margin: 0 15%;
     padding: 1px 10%;
 }
 
@@ -101,4 +101,10 @@ button:hover {
 
 #quiz p {
     text-align: center;
+}
+
+@media only screen and (max-width: 767px) {
+    main {
+        margin: 0;
+    }
 }
